@@ -13,7 +13,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Valentin Berthault {@literal <valentin.berthault at rte-france.com>}
@@ -40,10 +39,10 @@ public class MetrixConfigResult {
         List<String> overloadedTimeSeriesNames = timeSeriesNodesAfterMapping.keySet().stream()
                 .filter(timeSeriesNodesAfterMetrix::containsKey)
                 .filter(e -> timeSeriesNodesAfterMapping.get(e) != timeSeriesNodesAfterMetrix.get(e))
-                .collect(Collectors.toList());
+                .toList();
         // Remove from mapping nodes time series defined in mapping script and in metrix configuration script (same name but different formula)
         // -> metrix one overloads mapping one
-        timeSeriesNodesAfterMapping.keySet().removeAll(overloadedTimeSeriesNames);
+        overloadedTimeSeriesNames.forEach(timeSeriesNodesAfterMapping.keySet()::remove);
         this.mappingTimeSeriesNodes.putAll(timeSeriesNodesAfterMapping);
         // Remove from metrix nodes all mapping nodes
         timeSeriesNodesAfterMetrix.keySet().removeAll(mappingTimeSeriesNodes.keySet());
