@@ -65,7 +65,7 @@ public class TimeSeriesMappingConfigTableLoader {
                 int nbPointsToLoad = Math.max(pointRange.upperEndpoint() + 1, Math.min(index.getPointCount(), MIN_NUMBER_OF_POINTS));
                 try {
                     List<List<DoubleTimeSeries>> split = TimeSeries.split(timeSeriesList, nbPointsToLoad);
-                    loadedTimeSeries = split.get(0);
+                    loadedTimeSeries = split.getFirst();
                 } catch (RuntimeException e) {
                     LOGGER.warn("Failed to split timeSeries with {} pointsToLoad and {} pointsToCompute (reason : {}). Will take the whole time series", nbPointsToLoad, nbPointsToCompute, e.getMessage());
                     loadedTimeSeries = store.getDoubleTimeSeries(timeSeriesNamesToLoad, version);
